fixed nav z-index

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -76,6 +76,7 @@ header {
     height: 100vh;
     max-height: 500px;
     position: relative;
+    z-index: 0;
 }
 
 .hero-text-box {
@@ -86,6 +87,7 @@ header {
     width: 1140px;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
+    z-index: 1;
 }
 /* --------------------------------------------*/
 
@@ -192,6 +194,8 @@ header {
     text-align: center;
     cursor: pointer;
     display: none;
+    position: relative;
+    z-index: 2;
 
 }
 
